--- a/hosts.yaml
+++ b/hosts.yaml
@@ -1,1 +1,22 @@
-Test: Test
+---
+datacenter:
+  children:
+    routers:
+      hosts:
+        192.168.8.172:
+      vars:
+        testvar: 999
+    switches:
+      hosts:
+        192.168.8.181:
+  vars:
+    ansible_connection: network_cli
+    ansible_network_os: ios
+    ansible_user: admin
+    ansible_ssh_pass: cisco123
+    ntp_servers:
+      - server 0.dk.pool.ntp.org
+      - server 1.dk.pool.ntp.org
+    dns_servers:
+      - 8.8.8.8
+      - 9.9.9.9
