Opdateret Host fil og config

--- a/set_banner.yaml
+++ b/set_banner.yaml
@@ -13,3 +13,26 @@
           *  Din mor er en mand  *
           ***********************************
         state: present
+
+    - name: Set motd banner with dynamic hostname
+      cisco.ios.ios_banner:
+        banner: motd
+        text: |
+          ***********************************
+          *  Velkommen til hosten {{ router_hostname }}  *
+          *  Dagens motto er:    *
+          *  Din mor er en mand  *
+          ***********************************
+        state: present
+
+
+    - name: Set motd banner with dynamic hostname
+      cisco.ios.ios_banner:
+        banner: exec
+        text: |
+          ***********************************
+          *  Hold da ferie, du har nu adgang til {{ router_hostname }}  *
+          *  Dette må så betyde:    *
+          *  Din mor er en mand  *
+          ***********************************
+        state: present
